feat(engine): add default tenant to old pending distributions
This state is only used for pending deployment distributions. These are
no longer used since the introduction of generalized distribution. It is
 safe to assume that any data in this state belongs to the default
 tenant. Because of this we don't have to do complex stuff to make it
 tenant aware. We just have to make sure we add the default tenant to
 the deployment record on distribution.